Fixed JavaFX plugin and file structure for accessing the dashboard.fxml in MainApp.